# uTOF

./: .gitignore  README.md  uTOFenv.sh
scripts/: processDirectory.sh  processDirectoryClean.sh  processDirectoryDone.sh  processDirectoryRun.sh  processStrip.sh  processStripDone.sh  processStripIncomplete.sh  processStripRun.sh
src/: CMakeLists.txt
src/calibration/: Base.cxx  Base.h  CMakeLists.txt  Channel.cxx  Channel.h  Offset.cxx  Offset.h  Slewing.cxx  Slewing.h  Walk.cxx  Walk.h  calibration_LinkDef.h
src/cmake/: uTOF.cmake
src/dataFormat/: CMakeLists.txt  Channel.cxx  Channel.h  Hit.cxx  Hit.h  StripWriter.cxx  StripWriter.h  Writer.cxx  Writer.h  dataFormat_LinkDef.h
src/utils/: CMakeLists.txt  stripCalib.cxx  stripWriter.cxx  writer.cxx
